--- a/webclient/public/index.html
+++ b/webclient/public/index.html
@@ -39,7 +39,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-  <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
   <script>
     // Initialize Firebase
     var config = {
@@ -51,7 +51,9 @@
       messagingSenderId: "553095309941"
     };
     firebase.initializeApp(config);
-  </script>
+  </script> -->
+  <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-firestore.js"></script>
 </body>
 
 </html>
